input: set the current surface correctly for tablet events

It ignored subsurfaces and always used the root surface of the window.

BUG: 499576
CCBUG: 498386
(cherry picked from commit e3e6af69c64fc15b3a7a2f3ffa493d2f7315d374)