src/wayland/surface.cpp
@@ -1098,6 +1098,15 @@ SurfaceInterface *SurfaceInterface::inputSurfaceAt(const QPointF &position)
     return nullptr;
 }
 
+std::pair<SurfaceInterface *, QPointF> SurfaceInterface::mapToInputSurface(const QPointF &position)
+{
+    auto surface = inputSurfaceAt(position);
+    if (!surface) {
+        surface = this;
+    }
+    return std::make_pair(surface, mapToChild(surface, position));
+}
+
 LockedPointerV1Interface *SurfaceInterface::lockedPointer() const
 {
     return d->lockedPointer;
@@ -1128,11 +1137,7 @@ QPointF SurfaceInterface::mapToChild(SurfaceInterface *child, const QPointF &poi
     QPointF local = point;
     SurfaceInterface *surface = child;
 
-    while (true) {
-        if (surface == this) {
-            return local;
-        }
-
+    while (surface != this) {
         SubSurfaceInterface *subsurface = surface->subSurface();
         if (Q_UNLIKELY(!subsurface)) {
             return QPointF();
@@ -1142,7 +1147,7 @@ QPointF SurfaceInterface::mapToChild(SurfaceInterface *child, const QPointF &poi
         surface = subsurface->parentSurface();
     }
 
-    return QPointF();
+    return local;
 }
 
 qreal SurfaceInterface::scaleOverride() const
